--- a/dim_loan_accounts_funded.yml
+++ b/dim_loan_accounts_funded.yml
@@ -86,6 +86,18 @@ cubes:
         sql: overdue_amt
         type: number
 
+      - name: full_rate
+        sql: full_rate
+        type: number
+
+      - name: base_rate
+        sql: base_rate
+        type: number
+
+      - name: preference_rate
+        sql: preference_rate
+        type: number
+
       - name: currency
         sql: currency
         type: string
