--- a/dim_gam.yml
+++ b/dim_gam.yml
@@ -7,9 +7,9 @@ cubes:
       # - name: dim_product
       #   sql:  "{dim_gam}.product_scheme_code_sk = {dim_product.product_scheme_code_sk}"
       #   relationship: one_to_many
-      - name: dim_deposit_accounts
-        sql:  "{dim_gam}.foracid_sk = {dim_deposit_accounts.foracid_sk}"
-        relationship: one_to_one
+      # - name: dim_deposit_accounts
+      #   sql:  "{dim_gam}.foracid_sk = {dim_deposit_accounts.foracid_sk}"
+      #   relationship: one_to_one
       # - name: dim_loan_accounts_funded
       #   sql:  "{dim_gam}.foracid_sk = {dim_loan_accounts_funded.foracid_sk}"
       #   relationship: one_to_one
