--- a/dim_loan_accounts_funded.yml
+++ b/dim_loan_accounts_funded.yml
@@ -18,7 +18,7 @@ cubes:
         primaryKey: true
 
       - name: cif_id
-        sql: "${dim_gam}.cif_id"
+        sql: "${dim_gam.cif_id}"
         type: string
 
       - name: foracid
