--- a/dim_deposit_accounts.yml
+++ b/dim_deposit_accounts.yml
@@ -119,15 +119,15 @@ cubes:
         filters:
           - sql : "{CUBE.cif_id} is not null"
 
-      # - name: total_cr_transactions_vol
-      #   sql: >
-      #     (
-      #       select case when del_flg='N' and part_tran_type='C' then (case when ref_crncy_code != 'NPR' then ref_amt else tran_amt end) else 0 end from gold_fact.fact_transaction_details a
-      #       where a.cif_id = {CUBE.cif_id}
-      #     )
-      #   type: sum
-      #   filters:
-      #     - sql : "{CUBE.cif_id} is not null"
+      - name: total_cr_transactions_vol
+        sql: >
+          (
+            select sum(case when del_flg='N' and part_tran_type='C' then (case when ref_crncy_code != 'NPR' then ref_amt else tran_amt end) else 0 end) from gold_fact.fact_transaction_details a
+            where a.cif_id = {CUBE.cif_id}
+          )
+        type: sum
+        filters:
+          - sql : "{CUBE.cif_id} is not null"
 
     pre_aggregations:
       # Pre-aggregation definitions go here.
