--- a/ai360cdp.yml
+++ b/ai360cdp.yml
@@ -20,7 +20,7 @@ cubes:
         sql: "{dim_customers}.cif_sk = {dim_indiv_relationship.cif_sk}"
         relationship: one_to_many
       
-      - name: dim_communications
+      - name: demo_gold_dimensions.dim_communications
         sql: "{dim_customers}.cif_sk = {dim_communications.cif_sk}"
         relationship: one_to_many
       
