--- a/ai360cdp.yml
+++ b/ai360cdp.yml
@@ -20,8 +20,8 @@ cubes:
         sql: "{dim_customers}.cif_sk = {dim_indiv_relationship.cif_sk}"
         relationship: one_to_many
       
-      - name: demo_gold_dimensions.dim_communications
-        sql: "{dim_customers}.cif_sk = {dim_communications.cif_sk}"
+      - name: dim_communications
+        sql: "{dim_customers}.cif_sk = {demo_gold_dimensions.dim_communications.cif_sk}"
         relationship: one_to_many
       
       - name: dim_document
