added relationship of demo dim comm

--- a/dim_communications.yml
+++ b/dim_communications.yml
@@ -1,6 +1,6 @@
 cubes:
   - name: dim_communications
-    sql_table: gold_dimensions.dim_communications
+    sql_table: demo_gold_dimensions.dim_communications
     data_source: default
 
     joins: []
