added relationship of demo dim comm

--- a/ai360cdp-view.yml
+++ b/ai360cdp-view.yml
@@ -8,6 +8,9 @@ views:
       - join_path: AI360CDP
         includes:
           - "*"
+      - join_path: dim_communications
+        includes:
+          - "*"
     includes:
       - AI360CDP.count_customers
     dimensions:
