added relationship of demo dim comm

--- a/ai360cdp-view.yml
+++ b/ai360cdp-view.yml
@@ -48,5 +48,8 @@ views:
       - name: occupation
         sql: "{AI360CDP.occupation}"
         type: string
+      - name: email
+        sql: "{dim_communications.email}"
+        type: string
 
       
