added relationship of demo dim comm

--- a/ai360cdp-view.yml
+++ b/ai360cdp-view.yml
@@ -49,7 +49,7 @@ views:
         sql: "{AI360CDP.occupation}"
         type: string
       - name: email
-        sql: "{dim_communications.email}"
+        sql: "{demo_gold_dimensions.dim_communications.dim_communications.email}"
         type: string
 
       
